data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3577.wast
;; 6. **Complex Control Flow with Function Calls**:    Construct a test involving complex control flows with nested loops and conditional statements, interspersed with function calls. This validates whether the CFG accurately represents such intricate pathways and correctly handles the validation and execution of call instructions.

(assert_invalid
  (module
    (func $complex-flow (param i32) (result i32)
      (if (i32.const 1)
        (then
          (block
            (loop
              (br_if 1 (i32.eq (get_local 0) (i32.const 0)))
              (call $nested-func (get_local 0))
              (set_local 0 (i32.sub (get_local 0) (i32.const 1)))
              (br 0)
            )
          )
          (i32.const 0)
        )
        (else
          (call $return-zero)
        )
      )
    )
    (func $nested-func (param i32) (result i32)
      (i32.add (get_local 0) (i32.const 1))
    )
    (func $return-zero (result i32) (i32.const 0))
  )
  "type mismatch"
)